--- a/knowUs.html
+++ b/knowUs.html
@@ -82,7 +82,7 @@
             us.
             </p>
             </div>
-            <div class=" aboutimg  col-sm-12 col-md-5"><img alt="Three People" class="img-fluid" src="css/images/architecture-1836070.jpg"></div>
+            <div class=" aboutimg  col-sm-12 col-md-5"><img alt="Three People" class="img-fluid" src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"></div>
             </div>
             
             </div>
@@ -103,20 +103,20 @@
 
               <section class="white  ">
                 <div class="container d-none d-md-block">
-                  <h2 class="motil">Achivements</h2>
-                  <p class="lead font-weight-normal" style="text-align: center;">Awarded as the best channel partner since last three years</p>
+                  <h2 class="motil">Projects</h2>
+                  <p class="lead font-weight-normal" style="text-align: center;">Recent sold projects, with customer satisfaction.</p>
                   <hr>
                 <div class="row">
               <div class="col-12">
                 <div class="row text-center">
                 <div class="col-4 mx-auto">
-                <img alt="PC Magazine Best Hosting Provider of the Year Award" class="img-fluid img-thumbnail" src="css/images/20200716_110801_0000.png">
+                <img alt="PC Magazine Best Hosting Provider of the Year Award" class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1559329145-afaf18e3f349?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
                 </div>
                 <div class="col-4 mx-auto">
-                <img alt="Finances Great User Experience Online 2018 Award" class="img-fluid img-thumbnail" src="css/images/20200716_095759_0000.png">
+                <img alt="Finances Great User Experience Online 2018 Award" class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1553524803-2eec745b729e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
                 </div>
                 <div class="col-4 mx-auto">
-                <img alt="Find My Host Editors Choice Award" class="img-fluid img-thumbnail" src="css/images/Screenshot_20200715-155944_1.png">
+                <img alt="Find My Host Editors Choice Award" class="img-fluid img-thumbnail" src="https://images.unsplash.com/photo-1494526585095-c41746248156?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
                 </div>
                 </div>
                 </div>
@@ -191,7 +191,7 @@
       <section class="gray">
         <div class="container">
           <div class="row">
-            <div class="section-img col-sm-12 col-md-6"><img alt="Seattle Skyline" class="img-fluid" src="css/images/photo-1582268611958-ebfd161ef9cf.jpg"></div>
+            <div class="section-img col-sm-12 col-md-6"><img alt="Seattle Skyline" class="img-fluid" src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"></div>
               <div class="section-text col-sm-12 col-md-6">
                   <h3 class="section-title">Bihar Headquarter</h3>
                   <p class="sub-title">Silk city of INDIA </p>
@@ -214,7 +214,7 @@
       <a href="https://www.facebook.com/multihomesatbgp"><i class="fab fa-facebook-f  icon1"></i></a>
       <a href="https://www.instagram.com/multi.homes/"><i class="fab fa-instagram  icon1"></i></a>
       <i class="fas fa-envelope  icon1"></i>
-      <p class="copyright">© Copyright 2020 <span class="multii">Multi</span>  <spam class="hom">Homes</spam></p>
+      <p class="copyright">© Copyright 2020 <span class="multiii">Multi</span>  <spam class="homi">Homes</spam></p>
   
   
     </footer>
